--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "dotenv": "^16.3.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
