--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "dotenv": "^16.3.1",
+    "serpapi": "^2.0.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
-    "vite": "^4.4.11"
+    "vite": "^4.5.0"
   }
 }
